--- a/Sawoodamo.API/Sawoodamo.API.csproj
+++ b/Sawoodamo.API/Sawoodamo.API.csproj
@@ -6,6 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <InvariantGlobalization>false</InvariantGlobalization>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <UserSecretsId>e5586817-34f6-47ab-8ca5-0e0f9b8fcf17</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
