--- a/.gitignore
+++ b/.gitignore
@@ -389,7 +389,7 @@ FodyWeavers.xsd
 !.vscode/extensions.json
 *.code-workspace
 **/.vscode/
-
+samples/
 # Local History for Visual Studio Code
 .history/
 
